@@ -50,6 +50,15 @@
         profile="plone.app.theming:default"
         />
 
+    <gs:upgradeDepends
+        title="Grant theme management to Site Administrator"
+        source="1001"
+        destination="1002"
+        profile="plone.app.theming:default"
+        import_steps="rolemap"
+        run_deps="false"
+	    />
+
     <!-- Transform order 8850 - apply theme transform -->
     <adapter
         name="plone.app.theming.transform"
