@@ -1,0 +1,19 @@
+<?xml version="1.0"?>
+<rolemap>
+
+  <roles />
+
+  <permissions>
+    <permission name="Plone Site Setup: Themes"
+                acquire="True">
+      <role name="Manager" />
+      <role name="Site Administrator" />
+    </permission>
+    <permission name="plone.resourceeditor: Manage Sources"
+                acquire="True">
+      <role name="Manager" />
+      <role name="Site Administrator" />
+    </permission>
+  </permissions>
+
+</rolemap>
