@@ -10,6 +10,9 @@ Changelog
 - Make it easier to delegate management of themes.
   [afrepues]
 
+- Grant theme management privileges to the Site Administrator.
+  [afrepues]
+
 
 1.1.1 (2013-05-23)
 ------------------
